--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
     }
 
     .product {
+        margin: 0 auto;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -41,7 +42,7 @@
         overflow: hidden;
         transition: transform 0.3s ease;
         padding: 10px;
-        width: 150px;
+        width: 180px;
         height: 200px;
         margin-right: 10px;
         margin-bottom: 10px;
